<resources>
    <string name="app_name">KSW-SoundRestorer</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="service_running">Service running....</string>
    <string name="service_stopped">Service stopped</string>
    <string name="command_type">Command Type:</string>
    <string name="send_command">Send Command</string>
    <string name="bytes">Bytes:</string>
    <string name="intercept_interval">Intercept Interval: </string>
    <string name="start_service_on_boot">Start Service on Boot</string>
</resources>